<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.eclipse.daanse</groupId>
		<artifactId>org.eclipse.daanse.olap.documentation</artifactId>
		<version>${revision}</version>
	</parent>
	<artifactId>org.eclipse.daanse.olap.documentation.common</artifactId>

	<dependencies>
		<dependency>
			<groupId>org.eclipse.daanse</groupId>
			<artifactId>org.eclipse.daanse.olap.documentation.api</artifactId>
			<scope>compile</scope>
			<version>${revision}</version>
		</dependency>
        <dependency>
            <groupId>org.eclipse.daanse</groupId>
            <artifactId>org.eclipse.daanse.db.jdbc.metadata</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.daanse</groupId>
            <artifactId>org.eclipse.daanse.olap.rolap.dbmapper.verifyer.basic</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>21</source>
          <target>21</target>
          <compilerArgs>
            --enable-preview
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
